--- a/index.html
+++ b/index.html
@@ -88,6 +88,7 @@
                 <a href="img ill/Label.jpg"><img src="img ill/Label.jpg"></a>
                 <a href="img ill/background2.png"><img src="img ill/background2.png"></a>
                 <a href="img ill/Mountains.png"><img src="img ill/Mountains.png"></a>
+                <a href="img ill/3.png"><img src="img ill/3.png"></a>
             </div>
 
     </div>
