--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
     <div class="name">
         Меня зовут Дарья
-        <br/> Я - &nbsp;<b>2D-художник</b>
+        <br/> Я  &nbsp;<b>2D-художник</b>
     </div>
   
 </div>
