--- a/index.html
+++ b/index.html
@@ -86,18 +86,9 @@
         <div id="me">
             <table>
                 <tr>
-                    <td><img class="ph" src="me.png" alt=""></td>
+                    <td><img class="ph" alt=""></td>
                     <td></td>
-                    <td>
-                        <img src="Mail.png" width="40" ; height="30"> &nbsp; DariaNik0@yandex.by 
-                        <br /> 
-                        <br /> 22 года.
-                        <br /> Живу в г. Минск
-                        <br /> Занимаюсь рисованием более 3 лет. 
-                        <br /> Создаю тематические изображения для книг и журналов, логотипы, иллюстрации 
-                        <br/>  для сайтов и многое другое.
-                        <br /> Работаю с программами <b>Adobe Illustrator</b> и <b>Adobe Photoshop</b>.
-                        <br /></td>
+                    <td></td>
                 </tr>
             </table>
             
