--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <h1>DARA</h1>
         </div>
         <div class="graf">
-            <h2>Иллюстратор</h2>
+            <h2>Художник-иллюстратор</h2>
         </div>
     </div>
 
