--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
                 <a> <img src="il/5.jpg"> </a>
                 <a> <img src="il/6.jpg"> </a>
                 <a> <img src="il/7.jpg"> </a>
+                <a> <img src="il/8.jpg"> </a>
             </div>
         </div>
 
